<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.projects.shoppinglist.MainActivity"
    tools:showIn="@layout/activity_main">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="6">

        <Button
            android:id="@+id/addButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_to_bag"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/inputAddIngredient"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/hint_for_items"
            android:inputType="text"/>

        <Spinner
            android:id="@+id/inputUnit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginBottom="30dp"/>

        <EditText
            android:id="@+id/inputAddQuantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_for_quantity"
            android:inputType="numberDecimal"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/welcome_sign"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/welcome_to_my_shopping_list"/>



    <ListView
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"/>
</LinearLayout>
