<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="org.projects.shoppinglist.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_delete_single"
        android:orderInCategory="10"
        android:title="@string/clear_selected"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/emptyList"
        android:orderInCategory="5"
        android:title="@string/clear_all"
        android:icon="@mipmap/trash"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_share"
        android:orderInCategory="90"
        android:title="@string/share"
        app:showAsAction="ifRoom"
        />

</menu>
